fix: Sternfahrten caption margin um gap verringert

--- a/sass/inhalt/ansprache/_sternfahrten.sass
+++ b/sass/inhalt/ansprache/_sternfahrten.sass
@@ -1,7 +1,7 @@
 #sternfahrten
 	padding: var(--padding)
+	$gap: 4rem
 	picture
-		$gap: 4rem
 		padding: $gap
 		position: relative
 		overflow: hidden
@@ -20,7 +20,7 @@
 			width: 100%
 			margin: -$gap
 	figcaption
-		margin-top: 2.4rem
+		margin-top: 2.4rem - $gap
 		font-size: 1.4rem
 		font-weight: bold
 		color: #777
